Adding a time bookmark feature

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Datacat",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "icons": {
     "48": "icons/cat.svg"
   },
@@ -13,6 +13,7 @@
     }
   },
   "permissions": [
-    "tabs"
+    "tabs",
+    "storage"
   ]
 }
